--- a/static/index.css
+++ b/static/index.css
@@ -21,7 +21,7 @@ section {
 
 
 
-
+ 
 
 
 /* Estilos globais */
@@ -35,6 +35,7 @@ body {
 /* Estilos do layout */
 .container {
   display: flex;
+  margin-right: auto;
 }
 
 .sidebar h1 {
