--- a/templates/login.html
+++ b/templates/login.html
@@ -4,30 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <title> Login </title> 
-        <!--
-            <link rel="stylesheet" href="../static/style.css">        
-        -->
         <link rel="stylesheet" href="../static/login.css">
         
     </head> 
     <body>
-        <!--
-        <div class="logincontent" align="center"> 
-            <div class="logintop"> 
-                <h1>Login</h1> 
-            </div></br></br></br></br> 
-            <div class="loginbottom"> 
-              <form action="{{ url_for('login')}}" method="post" autocomplete="off"> 
-            <div class="msg">{{ msg }}</div> 
-            <input type="text" name="operador" placeholder="Enter Your Username" class="textbox" id="operador" required></br></br> 
-            <input type="password" name="senha" placeholder="Enter Your Password" class="textbox" id="senha" required></br></br></br> 
-            <input type="submit" class="btn" value="Login"> 
-              </form></br></br> 
-              <p class="worddark">New to this page? <a class="worddark" href="{{ url_for('register')}}">Register here</a></p> 
-            </div> 
-        </div>
-        --> 
-
         <main>
             <section>
                 <div class="group-login">
@@ -57,6 +37,7 @@
                             <hr>
 
                             <p>Ainda não tem conta? <a class="worddark" href="{{ url_for('register')}}">Registre-se</a></p>
+                            <p><a class="worddark" href="{{ url_for('reset_password')}}"> Esqueceu a senha</a></p>
 
                             <div class="cont-foot">
                                 <div class="cont-foot-img">
@@ -68,7 +49,7 @@
                                 </div>
                                 </div>
                         
-                                <p>Copyright (c) 2023 COIDS
+                                <p id="copyright">Copyright (c) <span id="currentYear"></span> COIDS
                                 Todos os direitos reservados.</p>
                             </div>
                         </form>
@@ -77,7 +58,10 @@
             </section>
         </main>
 
-
+        <script>
+            var currentYear = new Date().getFullYear();
+            document.getElementById('currentYear').textContent = currentYear;
+        </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body> 
